--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,9 @@
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+              "action": "openExternally",
+              "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+              "uriFormat": "%s/swagger/index.html"
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
