upgrade dotnet 8.0, update client to use vite for build and serve

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,7 +9,17 @@
     }
   },
   "profiles": {
-    "Tabloid": {
+    "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
